--- a/network.html
+++ b/network.html
@@ -149,6 +149,10 @@
             <img src="media/imagen2.png" alt="NAT" class="article-image">
             <h2><a href="network/nat.html">NAT</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="OSPF" class="article-image">
+            <h2><a href="network/ospf.html">OSPF</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
