--- a/network/ospf.html
+++ b/network/ospf.html
@@ -534,6 +534,7 @@ interface GigabitEthernet0/0
                         <li><marcador class="resaltado8">Throttle SPF: </marcador>Configurado en INET-1 para optimizar el tiempo de recalculo de SPF en caso de cambios en la topología, usando los valores de 10 ms (inicial), 100 ms (segunda iteración), y 5000 ms (máximo).</li>
                     </ol>
                 </ul>
+                <h6>BGP</h6>
                 <p>Para conectar con el ISP en esta topología, lo más común sería utilizar el protocolo BGP (Border Gateway Protocol) para la interconexión entre el ISP y tu red interna que utiliza OSPF. Esto se debe a que:</p>
                 <ol>
                     <li>BGP es el protocolo estándar para comunicar redes autónomas, como la red interna y la del ISP.</li>
