--- a/network/ospf.html
+++ b/network/ospf.html
@@ -411,6 +411,7 @@ interface GigabitEthernet0/0
                     </div>
                     <li><marcador class="resaltado8">Router ISP</marcador></li>
                     <p>Este router se conecta al prefijo externo (172.33.1.2/30) que se redistribuirá en INET-1.</p>
+                    <h6>Parámetros Clave</h6>
                     <ol>
                         <li><marcador class="resaltado8">Prioridad de DR en el Área 0: </marcador>Se configura <marcador class="subrayado">ip ospf priority</marcador> en el área 0, siendo INET-1 el router con la prioridad más alta (200) para actuar como Designated Router (DR), mientras que otros routers en el área tienen menor prioridad.</li>
                         <li><marcador class="resaltado8">Redistribución de Rutas Externas (E1): </marcador>En INET-1, se configuran rutas E1 para redistribuir los prefijos externos provenientes del router ISP.</li>
@@ -536,6 +537,7 @@ interface GigabitEthernet0/0
                     </div>
                     <li><marcador class="resaltado8">Router ISP</marcador></li>
                     <p>Este router se conecta al prefijo externo (172.33.1.2/30) que se redistribuirá en INET-1.</p>
+                    <h6>Parámetros Clave</h6>
                     <ol>
                         <li><marcador class="resaltado8">Prioridad de DR en el Área 0: </marcador>Se configura <marcador class="subrayado">ospf priority</marcador> en el área 0, siendo INET-1 el router con la prioridad más alta (200) para actuar como Designated Router (DR), mientras que otros routers en el área tienen menor prioridad.</li>
                         <li><marcador class="resaltado8">Redistribución de Rutas Externas (E1): </marcador>En INET-1, se configuran rutas E1 para redistribuir los prefijos externos provenientes del router ISP.</li>
