--- a/network.html
+++ b/network.html
@@ -157,6 +157,10 @@
             <img src="media/imagen2.png" alt="VPN" class="article-image">
             <h2><a href="network/vpn.html">VPN</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="VRRP" class="article-image">
+            <h2><a href="network/vrrp.html">VRRP</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
