--- a/network/ospf.html
+++ b/network/ospf.html
@@ -66,6 +66,12 @@
                 <div class="blog-image-grande">
                     <img src="media/ospf8.jpeg" alt="">
                 </div>
+                <h2>Temporizadores</h2>
+                <p>En OSPF (Open Shortest Path First), el Hello Time y el Dead Time son temporizadores que gestionan la detección de vecinos:</p>
+                <ul>
+                    <li><marcador class="resaltado9">Hello Time: </marcador>Es el intervalo en segundos en que un router OSPF envía mensajes "Hello" a sus vecinos para indicar que está activo. El valor predeterminado suele ser 10 segundos en redes broadcast.</li>
+                    <li><marcador class="resaltado9">Dead Time: </marcador>Es el tiempo máximo que un router espera sin recibir mensajes "Hello" de un vecino antes de considerarlo inactivo o "muerto". Generalmente, es 4 veces el valor de Hello Time (40 segundos por defecto).</li>
+                </ul>
                 <h2>Tipos de Mensajes de OSPF</h2>
                 <p>OSPF usa cinco tipos de mensajes para sus operaciones:</p>
                 <ul>
