--- a/ia.html
+++ b/ia.html
@@ -85,6 +85,10 @@
             <img src="media/imagen3.png" alt="PyTorch" class="article-image">
             <h2><a href="ia/pytorch.html">PyTorch</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Spark" class="article-image">
+            <h2><a href="ia/spark.html">Spark</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
