--- a/ia/spark.html
+++ b/ia/spark.html
@@ -207,7 +207,8 @@ modelo = lr.fit(df)
                 </div>
                 <p>Para aprovechar al máximo PySpark, generalmente se usa en un clúster de Spark. Esto se puede configurar en servicios en la nube (como AWS o Google Cloud) o en sistemas distribuidos como Hadoop.</p>
                 <h2>Ejemplos</h2>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Keras/keras.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con PySpark.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pyspark/PySpark.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con PySpark.</p>
+                <p>Para más ejemplos, visita la página con la <a href="https://runawayhorse001.github.io/LearningApacheSpark/rdd.html#create-rdd" target="blank">documentación oficial</a>.</p>
                 <div class="blog-image-grande">
                     <img src="media/spark3.png" alt="">
                 </div>
